Fixed post text overflow

--- a/style.css
+++ b/style.css
@@ -713,7 +713,6 @@ h4 {
 }
 
 .post-text > div {
-	width: 100%;
 	padding-left: 15px;
 	padding-right: 15px;
 }
